--- a/plantain/pyproject.toml
+++ b/plantain/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["samwinder <sam@myurbanjungle.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pika = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 
