--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1"
   },
@@ -20,6 +21,7 @@
     "@types/node": "^18.7.19",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20",
+    "prisma": "^4.3.1",
     "typescript": "^4.8.3"
   }
 }
