--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
