--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "@types/jsonwebtoken": "^8.5.9",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "zod": "^3.19.1",
+    "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
